--- a/OzricService/wwwroot/graph.html
+++ b/OzricService/wwwroot/graph.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ozric</title>
+    <title>Ozric Graph</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 </head>
@@ -21,8 +21,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="graph.html">Graph</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="graph.html">Graph</a></li>
             </ul>
         </div>
     </div>
@@ -30,9 +30,11 @@
 
 <div class="container">
 
+    <h3>Graph</h3>
+
     <form>
         <div class="form-group">
-            <label for="graph-json">Graph JSON</label>
+            <label for="graph-json">JSON</label>
         </div>
         <div class="form-group">
             <textarea id="graph-json"></textarea>
