--- a/OzricService/wwwroot/index.html
+++ b/OzricService/wwwroot/index.html
@@ -28,17 +28,59 @@
     </div>
 </nav>
 
-<div class="container">
 
-    <div>
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-    </div>
+<div class="container">
+    
+    <h3>Status</h3>
+
+    <form>
+        <div class="form-group">
+            <input class="form-check-input" type="checkbox" value="" id="status-paused">
+            <label class="form-check-label" for="status-paused">
+                Engine paused
+            </label>
+        </div>
+        <div class="form-group">
+            <button id="update-status" type="submit" class="btn btn-default" disabled>Update</button>
+        </div>
+    </form>
 
 </div>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function () {
+        $.getJSON("api/status", function(data) {
+            $("#status-paused").prop('checked', data["paused"])
+            $("#update-status").prop("disabled", false)
+        });
+
+        $("#update-status").click(function () {
+
+            $("#update-status").prop("disabled", true)
+
+            $.ajax({
+                url: "api/status",
+                type: "PUT",
+                contentType: "application/json",
+                data: JSON.stringify({
+                    "paused": $('#status-paused').prop('checked')
+                }),
+                error: function () {
+                    $("#update-status").prop("disabled", false)
+                },
+                success: function () {
+                    $("#update-status").prop("disabled", false)
+                },
+                timeout: 3000
+            });
+
+            return false;
+        });
+
+    })
+</script>
 
 </body>
 </html>
