--- a/OzricService/wwwroot/graph.html
+++ b/OzricService/wwwroot/graph.html
@@ -21,8 +21,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="graph.html">Graph</a></li>
+                <li><a href="status">Status</a></li>
+                <li class="active"><a href="graph">Graph</a></li>
             </ul>
         </div>
     </div>
