Show raw states in web FE

--- a/OzricService/wwwroot/graph.html
+++ b/OzricService/wwwroot/graph.html
@@ -51,7 +51,7 @@
 <script>
 $(document).ready(function () {
     $.getJSON("api/graph", "text", function(data) {
-        $("#graph-json").val(JSON.stringify(data))
+        $("#graph-json").val(JSON.stringify(data, null, '\t'))
         $("#update-graph").prop("disabled", false)
     });
 
